--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ set( sources
 
 cmake_print_variables(sources)
 include_directories ("../tinylib_hal/src/${HAL_PATH}")
-add_avr_library (usart ${sources})
-target_include_directories (usart PUBLIC include)
-target_include_directories (usart PUBLIC src)
+add_avr_library (utils ${sources})
+target_include_directories (utils PUBLIC include)
+target_include_directories (utils PUBLIC src)
 
-avr_target_link_libraries(usart mcal)
+avr_target_link_libraries(utils hal)
